# Hpc

./: README.md  gpu.c
Final/: CMakeLists.txt  cpu.cpp  gpu.cpp
Parcial2/: README.md
Parcial2/Cache/: CMakeLists.txt  Cache.cu  Cache.cu~
Parcial2/Global/: CMakeLists.txt  CMakeLists.txt~  Global.cu  Global.cu~
Parcial2/Sec/: sobel.cc~
Parcial2/Shared/: CMakeLists.txt  Shared.cu  Shared.cu~
Talleres/MultMat/: CPU.c  GPU.c  GPUSM.c  README.md
Talleres/SumaVec/: .~lock.A continuación se muestra un comparativo entre el procesamiento por medio de CPU y el hecho a partir de una GPU.docx#  A continuación se muestra un comparativo entre el procesamiento por medio de CPU y el hecho a partir de una GPU.docx  README.md  cpu.c
Talleres/opencv1/practica/: CMakeLists.txt  sobel.cc  sobel.cc~
