cmake_minimum_required(VERSION 2.8)
project( Shared )
find_package( OpenCV REQUIRED )
find_package( CUDA REQUIRED )
set(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS}; -O3; -arch=compute_52)#-gencode=arch=compute_52,code=sm_52;-gencode=arch=compute_52,code=compute_52)
cuda_add_executable( Shared Shared.cu )
target_link_libraries( Shared ${OpenCV_LIBS} )
